--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(csc231_graphics_project1
         main.cpp
         canvas.cpp
+        circle.cpp
         ellipse.cpp
         flower.cpp
         parallelogram.cpp
