Separated project into libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,29 @@ project(csc231_graphics_project1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(csc231_graphics_project1
-        main.cpp
+# backend team source files
+add_library(canvas
+        style.cpp
         canvas.cpp
-        ellipse.cpp
-        flower.cpp
-        parallelogram.cpp
+        parrot.cpp
         point.cpp
-        polygon.cpp
-        polyline.cpp
-        rectangle.cpp
-        shape.cpp
-        triangle.cpp
 )
+
+# main() for testing
+add_executable(backend
+        backend-main.cpp
+)
+target_link_libraries(backend PUBLIC canvas)
+
+
+# frontend team source files
+add_library(shapes
+        shape.cpp
+        heart.cpp
+)
+target_link_libraries(shapes PUBLIC canvas)
+
+add_executable(frontend
+        frontend-main.cpp
+)
+target_link_libraries(frontend PUBLIC shapes)
