--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,17 @@ target_link_libraries(backend PUBLIC canvas)
 # frontend team source files
 add_library(shapes
         shape.cpp
+        ellipse.cpp
+        flower.cpp
         heart.cpp
+        parallelogram.cpp
+        point.cpp
+        polygon.cpp
+        polyline.cpp
+        rectangle.cpp
+        triangle.cpp
 )
+
 target_link_libraries(shapes PUBLIC canvas)
 
 add_executable(frontend
