created cube cpp and added to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(backend PUBLIC canvas)
 # frontend team source files
 add_library(shapes
         shape.cpp
+        cube.cpp
         ellipse.cpp
         flower.cpp
         heart.cpp
