Created star shape and added it to CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(shapes
         triangle.cpp
         pentagon.cpp
         pentagon.h
+        star.cpp
 )
 target_link_libraries(shapes PUBLIC canvas)
 
