commit polyline-wrote polyline's functions and added pentagon shape

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ add_library(shapes
         polyline.cpp
         rectangle.cpp
         triangle.cpp
+        pentagon.cpp
+        pentagon.h
 )
 target_link_libraries(shapes PUBLIC canvas)
 
